# appointment_infra

./: INSTALL.md  Makefile  README.md  docker-compose.env.example  docker-compose.yaml
appointment_service/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
appointment_service/alembic/: env.py
appointment_service/alembic/versions/: 2025_08_31_2313-4cf236a7787a_.py
appointment_service/envs/: app.env.example  test.env.example
appointment_service/scripts/: run_tests.sh
appointment_service/src/: main.py  routers.py
appointment_service/src/api/dependencies/: appointment.py  repo.py
appointment_service/src/api/v1/: __init__.py
appointment_service/src/api/v1/appointments/: handlers.py  schemas.py  services.py
appointment_service/src/core/: config.py  enums.py
appointment_service/src/db/: manager.py  utils.py
appointment_service/src/db/models/: __init__.py  appointments.py  base.py  mixins.py
appointment_service/src/fs/appointments/: brokers.py
appointment_service/src/redis_tools/: client.py
appointment_service/src/repos/: __init__.py  appointment.py  base.py  master.py  utils.py
appointment_service/src/schemas/: appointments.py
appointment_service/src/tests/: conftest.py
appointment_service/src/tests/appoinments/: test_repo.py
appointment_service/src/tests/appointments/: fixtures.py
appointment_service/src/tests/appointments/unit/: test_repo.py  test_service.py
docker-compose/: docker-compose.test.yaml  docker-compose.yaml
docker-compose/envs/: test.env.example
notifier_service/: Dockerfile  alembic.ini  pyproject.toml
notifier_service/alembic/: env.py
notifier_service/alembic/versions/: 2025_08_29_1208-166793ad6937_.py  2025_08_30_1754-5e5f3b567a4f_.py
notifier_service/envs/: app.env.example
notifier_service/src/: main.py  routers.py
notifier_service/src/api/dependencies/: repo.py
notifier_service/src/api/v1/: __init__.py  pagination.py
notifier_service/src/api/v1/notifications/: handlers.py  schemas.py
notifier_service/src/core/: config.py  types.py
notifier_service/src/db/: manager.py  utils.py
notifier_service/src/db/models/: __init__.py  base.py  events.py  mixins.py  notifications.py
notifier_service/src/fs/notification/: brokers.py  queue.py  setup.py
notifier_service/src/repos/: base.py  events.py  master.py  notifications.py
notifier_service/src/schemas/: events.py  notifications.py
